fixing layout bugs

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,6 @@ body {
     flex-direction: column;
     background-color: rgb(59, 65, 99);
     margin: 0;
-    padding: 10px;
 }
 
 /* HEADER + LABEL STYLES*/
@@ -113,6 +112,18 @@ header h1 {
 .reverse-concert-container {
     display: flex;
     flex-direction:row-reverse;
+}
+
+.container-information {
+    width: 30%;
+}
+
+.container-copy {
+    width: 40%;
+}
+
+.container-img {
+    width: 30%;
 }
 
 .light-scheme {
